Implement toponym generation
